--- a/sap/templates/add_product.html
+++ b/sap/templates/add_product.html
@@ -1,14 +1,73 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Agregar Producto</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Agregar Usuario</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #f8f9fa;
+            padding: 20px;
+        }
+
+        h1 {
+            color: #007bff;
+        }
+
+        form {
+            max-width: 400px;
+            margin: 0 auto;
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        button {
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+        .header_top{
+            background: linear-gradient(269.94deg, #172399 9.29%, #e6ebf0 94.79%) !important;
+            opacity: 0.9;
+            /* height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0px 20px; */
+        }
+    </style>
 </head>
 <body>
-    <h1>Agregar Producto</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Guardar</button>
-    </form>
+        <header>        
+            <nav class="px-5 navbar navbar-light navbar-expand-lg bg-light justify-content-between header_top">            
+                
+                <span class="d-flex align-items-center">                
+                    <img src="{% static 'images/logo.png' %}" alt="logo banco de bogotá" style="width:15rem;">            
+                </span>            
+                <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target="#navbarNav"                
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">                
+                    <span class="navbar-toggler-icon "></span>            
+                </button>
+            <div class="callapse h3 text-light d-flex justify-content-center mt-1" id="navbarNav">
+                <i class="bi text-center bi-shield-x me-2"></i>Proyecto Final
+            </div>
+            </nav>
+            <div class="banner-image"></div>
+            </header> 
+    <div class="container">
+        <h1 class="mt-5 mb-4">Agregar Producto</h1>
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Guardar</button>
+        </form>
+    </div>
 </body>
 </html>
