--- a/sap/templates/base.html
+++ b/sap/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,10 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <style>
+        .header_top{
+            background: linear-gradient(269.94deg, #172399 9.29%, #e6ebf0 94.79%) !important;
+            opacity: 0.9;
+            /* height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0px 20px; */
+        }
+    </style>
 </head>
 <body>
+    
     {% block body%}
+    
     {% endblock %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
