--- a/sap/templates/product_list.html
+++ b/sap/templates/product_list.html
@@ -1,22 +1,102 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Lista de Productos</title>
+    <!-- Agrega los enlaces a Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .container {
+            margin-top: 50px;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .list-group-item {
+            cursor: pointer;
+        }
+
+        .list-group-item:hover {
+            background-color: #007bff;
+            color: #fff;
+        }
+
+        .logout-btn {
+            margin-top: 20px;
+        }
+        .header_top{
+            background: linear-gradient(269.94deg, #172399 9.29%, #e6ebf0 94.79%) !important;
+            opacity: 0.9;
+            /* height: 70px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0px 20px; */
+        }
+    </style>
 </head>
 <body>
-    <div class="list-group">
-    <h1>Lista de Productos</h1>
-    <ul>
-        {% for product in products %}
-            <a href="#" class="list-group-item list-group-item-action">{{ product.name }}</a>
-            {% comment %} <li>{{ product.name }} - {{ product.description }}</li> {% endcomment %}
-        {% endfor %}
-    </ul>
+        <header>        
+            <nav class="px-5 navbar navbar-light navbar-expand-lg bg-light justify-content-between header_top">            
+                
+                <span class="d-flex align-items-center">                
+                    <img src="{% static 'images/logo.png' %}" alt="logo banco de bogotá" style="width:15rem;">            
+                </span>            
+                <button class="navbar-toggler text-light" type="button" data-toggle="collapse" data-target="#navbarNav"                
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">                
+                    <span class="navbar-toggler-icon "></span>            
+                </button>
+            <div class="callapse h3 text-light d-flex justify-content-center mt-1" id="navbarNav">
+                <i class="bi text-center bi-shield-x me-2"></i>Proyecto Final
+            </div>
+            <span style="color: white; margin-left: 500px;">{{ request.session.rol }}</span>
+            <a href="/logout" class="btn btn-danger">Logout</a>
+            </nav>
+            <div class="banner-image"></div>
+            </header>
 
-  <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-  <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-  <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-  <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
+<div class="container">
+    <h1>Lista de Productos</h1>
+
+    <div class="list-group">
+        {% for product in products %}
+            <a href="#" class="list-group-item list-group-item-action">
+                <h5 class="mb-1">{{ product.name }}</h5>
+                <p class="mb-1">{{ product.description }}</p>
+                <small>{{ product.price }}</small>
+            </a>
+        {% endfor %}
+    </div>
+
+    {% if request.session.rol == "admin" %}
+        <a href="/home" class="btn btn-primary mr-2">Volver al Index</a>
+        <a href="/delete_product" class="btn btn-primary mr-2">Eliminar Productos</a>
+    {% endif %}
+
+    {% if request.session.rol == "editor" %}
+        <a href="/add_product" class="btn btn-primary mr-2">Crear Productos</a>
+    {% endif %}
+
+    <!-- Botón de logout utilizando Bootstrap -->
+    <!--<button href="{% url 'logout' %}" class="btn btn-danger logout-btn">Logout</button>-->
+    {% comment %} <span style="color: white; margin-left: 500px;">{{ request.session.rol|upper }}</span>
+    <a href="{% url 'logout' %}" class="btn btn-danger logout-btn">Logout</a> {% endcomment %}
+
 </div>
+
+<!-- Agrega los scripts de Bootstrap al final del cuerpo del documento para mejorar el rendimiento -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
